Updated CSS in back-bar to prevent text wrapping in breadcrumb
Fixes issue #21

--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -96,6 +96,9 @@ p {
       margin: 0;
       font-weight: bold;
       font-size: $back-bar-title-font-size;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
 } } }
 
 .company-info {
